--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="main-content">
             <div class="sticky-nav">
                 <div class="sticky-nav-icons">
-                    <img src="backward_icon (1).png ">
+                    <img src="./images/backward_icon (1).png ">
                     <img src="./images/forward_icon.png " class="hide">
                 </div>
                 <div class="sticky-nav-options">
